--- a/src/main/resources/application-zuul-dev.yml
+++ b/src/main/resources/application-zuul-dev.yml
@@ -10,6 +10,9 @@ zuul:
     course:
       path: /course/**
       service-id: course-service
+    course:
+      path: /file/**
+      service-id: file-service
 
 eureka:
   client:
