--- a/src/main/resources/application-zuul-dev.yml
+++ b/src/main/resources/application-zuul-dev.yml
@@ -10,7 +10,7 @@ zuul:
     course:
       path: /course/**
       service-id: course-service
-    course:
+    file:
       path: /file/**
       service-id: file-service
 
