服务配置文件提交

--- a/src/main/resources/application-file-dev.yml
+++ b/src/main/resources/application-file-dev.yml
@@ -12,3 +12,8 @@ eureka:
 spring:
   application:
     name: file-service
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10240000  #单个文件的最大上限
+      max-request-size: 10240000 #单个请求的文件总大小上限
