es配置文件提交

--- a/src/main/resources/application-zuul-dev.yml
+++ b/src/main/resources/application-zuul-dev.yml
@@ -16,6 +16,9 @@ zuul:
     cache:
       path: /cache/**
       service-id: cache-service
+    search:
+      path: /search/**
+      service-id: search-service
 eureka:
   client:
     serviceUrl:
