--- a/src/main/resources/application-search-dev.yml
+++ b/src/main/resources/application-search-dev.yml
@@ -1,16 +1,19 @@
-server:
-  port: 8003
-
+#注册到Eureka
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/ #服务注册的地址
+      defaultZone: http://localhost:8761/eureka/
+  #使用ip地址进行注册
   instance:
-    instance-id: search-service:8003
     prefer-ip-address: true
+    #要指定服务的实例ID
+    instance-id:  search-server:8003
+server:
+  port: 8003
 spring:
+  application:
+    name: search-server  #服务名
   data:
     elasticsearch:
-      repositories:
-        enabled : true
-      cluster-nodes:localhost:9300
+      cluster-name: elasticsearch
+      cluster-nodes: 127.0.0.1:9300 #9200是图形界面端,9300代码端
