用户配置文件提交

--- a/src/main/resources/application-zuul-dev.yml
+++ b/src/main/resources/application-zuul-dev.yml
@@ -19,6 +19,9 @@ zuul:
     search:
       path: /search/**
       service-id: search-service
+    user:
+      path: /user/**
+      service-id: user-service
 eureka:
   client:
     serviceUrl:
