--- a/src/main/resources/application-sms-dev.yml
+++ b/src/main/resources/application-sms-dev.yml
@@ -1,17 +1,14 @@
 server:
-  port: 8003
+  port: 8004
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/ #服务注册的地址
   instance:
-    instance-id: elasticsearch-service:8003
+    instance-id: sms-service:8004
     prefer-ip-address: true
 
 spring:
   application:
-    name: elasticsearch-service
-  data:
-    elasticsearch:
-      cluster-nodes: localhost:9300
+    name: sms-service
